--- a/test-output/emailable-report.html
+++ b/test-output/emailable-report.html
@@ -9,14 +9,13 @@
 <table>
 <tr><th>Test</th><th># Passed</th><th># Skipped</th><th># Retried</th><th># Failed</th><th>Time (ms)</th><th>Included Groups</th><th>Excluded Groups</th></tr>
 <tr><th colspan="8">Default suite</th></tr>
-<tr><td><a href="#t0">Default test</a></td><td class="num">5</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">30,342</td><td></td><td></td></tr>
+<tr><td><a href="#t0">Default test</a></td><td class="num">4</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">8,393</td><td></td><td></td></tr>
 </table>
-<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Default suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Default test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="5">TestCases.BankTests</td><td><a href="#m0">AnyRandomName</a></td><td rowspan="1">1708274448376</td><td rowspan="1">360</td></tr><tr class="passedeven"><td><a href="#m1">CustomerLogin</a></td><td rowspan="1">1708274447688</td><td rowspan="1">683</td></tr><tr class="passedeven"><td><a href="#m2">Withdrawl</a></td><td rowspan="1">1708274460942</td><td rowspan="1">15220</td></tr><tr class="passedeven"><td><a href="#m3">checkBalance</a></td><td rowspan="1">1708274476163</td><td rowspan="1">20</td></tr><tr class="passedeven"><td><a href="#m4">deposit</a></td><td rowspan="1">1708274448737</td><td rowspan="1">12204</td></tr></tbody>
+<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Default suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Default test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="4">TestCases.BankTests</td><td><a href="#m0">AddOneCustomer</a></td><td rowspan="1">1708440611974</td><td rowspan="1">2919</td></tr><tr class="passedeven"><td><a href="#m1">BankManagerLogin</a></td><td rowspan="1">1708440611389</td><td rowspan="1">582</td></tr><tr class="passedeven"><td><a href="#m2">deleteCustomer</a></td><td rowspan="1">1708440618094</td><td rowspan="1">133</td></tr><tr class="passedeven"><td><a href="#m3">openAccount</a></td><td rowspan="1">1708440614894</td><td rowspan="1">3197</td></tr></tbody>
 </table>
-<h2>Default test</h2><h3 id="m0">TestCases.BankTests#AnyRandomName</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m1">TestCases.BankTests#CustomerLogin</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m2">TestCases.BankTests#Withdrawl</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m3">TestCases.BankTests#checkBalance</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m4">TestCases.BankTests#deposit</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h2>Default test</h2><h3 id="m0">TestCases.BankTests#AddOneCustomer</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m1">TestCases.BankTests#BankManagerLogin</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m2">TestCases.BankTests#deleteCustomer</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m3">TestCases.BankTests#openAccount</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
 </body>
 </html>
