--- a/test-output/old/Default suite/methods-not-run.html
+++ b/test-output/old/Default suite/methods-not-run.html
@@ -1,2 +1,7 @@
 <h2>Methods that were not run</h2><table>
+<tr><td>TestCases.BankTests.CustomerLogin</td></tr>
+<tr><td>TestCases.BankTests.Withdrawl</td></tr>
+<tr><td>TestCases.BankTests.AnyRandomName</td></tr>
+<tr><td>TestCases.BankTests.deposit</td></tr>
+<tr><td>TestCases.BankTests.checkBalance</td></tr>
 </table>
