--- a/test-output/index.html
+++ b/test-output/index.html
@@ -51,7 +51,7 @@
               <ul>
                 <li>
                   <a href="#" panel-name="test-xml-Default_suite" class="navigator-link ">
-                    <span>C:\Users\pc\AppData\Local\Temp\testng-eclipse-220896744\testng-customsuite.xml</span>
+                    <span>C:\Users\pc\AppData\Local\Temp\testng-eclipse-266702754\testng-customsuite.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -93,7 +93,7 @@
               <div class="suite-section-content">
                 <ul>
                   <li>
-                    <span class="method-stats">5 methods,   5 passed</span>
+                    <span class="method-stats">4 methods,   4 passed</span>
                   </li>
                   <li>
                     <span class="method-list-title passed">Passed methods</span>
@@ -104,27 +104,22 @@
                     <div class="method-list-content passed suite-Default_suite">
                       <span>
                         <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="TestCases.BankTests" class="method navigator-link" hash-for-method="AnyRandomName">AnyRandomName</a> <!-- method navigator-link -->
+                        <a href="#" panel-name="suite-Default_suite" title="TestCases.BankTests" class="method navigator-link" hash-for-method="AddOneCustomer">AddOneCustomer</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                       <span>
                         <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="TestCases.BankTests" class="method navigator-link" hash-for-method="CustomerLogin">CustomerLogin</a> <!-- method navigator-link -->
+                        <a href="#" panel-name="suite-Default_suite" title="TestCases.BankTests" class="method navigator-link" hash-for-method="BankManagerLogin">BankManagerLogin</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                       <span>
                         <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="TestCases.BankTests" class="method navigator-link" hash-for-method="Withdrawl">Withdrawl</a> <!-- method navigator-link -->
+                        <a href="#" panel-name="suite-Default_suite" title="TestCases.BankTests" class="method navigator-link" hash-for-method="deleteCustomer">deleteCustomer</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                       <span>
                         <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="TestCases.BankTests" class="method navigator-link" hash-for-method="checkBalance">checkBalance</a> <!-- method navigator-link -->
-                      </span>
-                      <br/>
-                      <span>
-                        <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="TestCases.BankTests" class="method navigator-link" hash-for-method="deposit">deposit</a> <!-- method navigator-link -->
+                        <a href="#" panel-name="suite-Default_suite" title="TestCases.BankTests" class="method navigator-link" hash-for-method="openAccount">openAccount</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                     </div> <!-- method-list-content passed suite-Default_suite -->
@@ -147,37 +142,30 @@
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
                 <div class="method-content">
-                  <a name="AnyRandomName">
-                  </a> <!-- AnyRandomName -->
-                  <span class="method-name">AnyRandomName</span>
+                  <a name="AddOneCustomer">
+                  </a> <!-- AddOneCustomer -->
+                  <span class="method-name">AddOneCustomer</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
               <div class="method">
                 <div class="method-content">
-                  <a name="CustomerLogin">
-                  </a> <!-- CustomerLogin -->
-                  <span class="method-name">CustomerLogin</span>
+                  <a name="BankManagerLogin">
+                  </a> <!-- BankManagerLogin -->
+                  <span class="method-name">BankManagerLogin</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
               <div class="method">
                 <div class="method-content">
-                  <a name="Withdrawl">
-                  </a> <!-- Withdrawl -->
-                  <span class="method-name">Withdrawl</span>
+                  <a name="deleteCustomer">
+                  </a> <!-- deleteCustomer -->
+                  <span class="method-name">deleteCustomer</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
               <div class="method">
                 <div class="method-content">
-                  <a name="checkBalance">
-                  </a> <!-- checkBalance -->
-                  <span class="method-name">checkBalance</span>
-                </div> <!-- method-content -->
-              </div> <!-- method -->
-              <div class="method">
-                <div class="method-content">
-                  <a name="deposit">
-                  </a> <!-- deposit -->
-                  <span class="method-name">deposit</span>
+                  <a name="openAccount">
+                  </a> <!-- openAccount -->
+                  <span class="method-name">openAccount</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
@@ -185,7 +173,7 @@
         </div> <!-- panel Default_suite -->
         <div panel-name="test-xml-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">C:\Users\pc\AppData\Local\Temp\testng-eclipse-220896744\testng-customsuite.xml</span>
+            <span class="header-content">C:\Users\pc\AppData\Local\Temp\testng-eclipse-266702754\testng-customsuite.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -234,32 +222,28 @@ data.addColumn('number', 'Number');
 data.addColumn('string', 'Method');
 data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
-data.addRows(5);
+data.addRows(4);
 data.setCell(0, 0, 0)
-data.setCell(0, 1, 'Withdrawl')
+data.setCell(0, 1, 'openAccount')
 data.setCell(0, 2, 'TestCases.BankTests')
-data.setCell(0, 3, 15220);
+data.setCell(0, 3, 3197);
 data.setCell(1, 0, 1)
-data.setCell(1, 1, 'deposit')
+data.setCell(1, 1, 'AddOneCustomer')
 data.setCell(1, 2, 'TestCases.BankTests')
-data.setCell(1, 3, 12204);
+data.setCell(1, 3, 2919);
 data.setCell(2, 0, 2)
-data.setCell(2, 1, 'CustomerLogin')
+data.setCell(2, 1, 'BankManagerLogin')
 data.setCell(2, 2, 'TestCases.BankTests')
-data.setCell(2, 3, 683);
+data.setCell(2, 3, 582);
 data.setCell(3, 0, 3)
-data.setCell(3, 1, 'AnyRandomName')
+data.setCell(3, 1, 'deleteCustomer')
 data.setCell(3, 2, 'TestCases.BankTests')
-data.setCell(3, 3, 360);
-data.setCell(4, 0, 4)
-data.setCell(4, 1, 'checkBalance')
-data.setCell(4, 2, 'TestCases.BankTests')
-data.setCell(4, 3, 20);
+data.setCell(3, 3, 133);
 window.suiteTableData['Default_suite']= { tableData: data, tableDiv: 'times-div-Default_suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 28 seconds</span>
+              <span class="suite-total-time">Total running time: 6 seconds</span>
               <div id="times-div-Default_suite">
               </div> <!-- times-div-Default_suite -->
             </div> <!-- times-div -->
@@ -274,9 +258,24 @@ return data;
         </div> <!-- panel -->
         <div panel-name="ignored-methods-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">0 ignored methods</span>
+            <span class="header-content">5 ignored methods</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
+            <div class="ignored-class-div">
+              <span class="ignored-class-name">TestCases.BankTests</span>
+              <div class="ignored-methods-div">
+                <span class="ignored-method-name">CustomerLogin</span>
+                <br/>
+                <span class="ignored-method-name">Withdrawl</span>
+                <br/>
+                <span class="ignored-method-name">AnyRandomName</span>
+                <br/>
+                <span class="ignored-method-name">deposit</span>
+                <br/>
+                <span class="ignored-method-name">checkBalance</span>
+                <br/>
+              </div> <!-- ignored-methods-div -->
+            </div> <!-- ignored-class-div -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
         <div panel-name="chronological-Default_suite" class="panel">
@@ -291,28 +290,24 @@ return data;
                 <span class="method-start">0 ms</span>
               </div> <!-- configuration-test before -->
               <div class="test-method">
-                <span class="method-name">CustomerLogin</span>
-                <span class="method-start">1842 ms</span>
+                <span class="method-name">BankManagerLogin</span>
+                <span class="method-start">1547 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
-                <span class="method-name">AnyRandomName</span>
-                <span class="method-start">2530 ms</span>
+                <span class="method-name">AddOneCustomer</span>
+                <span class="method-start">2132 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
-                <span class="method-name">deposit</span>
-                <span class="method-start">2891 ms</span>
+                <span class="method-name">openAccount</span>
+                <span class="method-start">5052 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
-                <span class="method-name">Withdrawl</span>
-                <span class="method-start">15096 ms</span>
-              </div> <!-- test-method -->
-              <div class="test-method">
-                <span class="method-name">checkBalance</span>
-                <span class="method-start">30317 ms</span>
+                <span class="method-name">deleteCustomer</span>
+                <span class="method-start">8252 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-test after">
                 <span class="method-name">AfterTest</span>
-                <span class="method-start">30339 ms</span>
+                <span class="method-start">8387 ms</span>
               </div> <!-- configuration-test after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
