--- a/test-output/old/Default suite/methods-alphabetical.html
+++ b/test-output/old/Default suite/methods-alphabetical.html
@@ -1,18 +1,16 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="97d671">  <td>24/02/18 19:41:16</td>   <td>0</td> <td>&nbsp;</td><td title="&lt;&lt;BankTests.AfterTest()[pri:0, instance:TestCases.BankTests@158a3b2e]">&lt;&lt;AfterTest</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1805164661</td>   <td></td> </tr>
-<tr bgcolor="97d671">  <td>24/02/18 19:40:48</td>   <td>-27809</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="BankTests.AnyRandomName()[pri:2, instance:TestCases.BankTests@158a3b2e]">AnyRandomName</td> 
-  <td>main@1805164661</td>   <td></td> </tr>
-<tr bgcolor="97d671">  <td>24/02/18 19:40:47</td>   <td>-28497</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="BankTests.CustomerLogin()[pri:1, instance:TestCases.BankTests@158a3b2e]">CustomerLogin</td> 
-  <td>main@1805164661</td>   <td></td> </tr>
-<tr bgcolor="97d671">  <td>24/02/18 19:41:00</td>   <td>-15243</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="BankTests.Withdrawl()[pri:4, instance:TestCases.BankTests@158a3b2e]">Withdrawl</td> 
-  <td>main@1805164661</td>   <td></td> </tr>
-<tr bgcolor="97d671">  <td>24/02/18 19:41:16</td>   <td>-22</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="BankTests.checkBalance()[pri:5, instance:TestCases.BankTests@158a3b2e]">checkBalance</td> 
-  <td>main@1805164661</td>   <td></td> </tr>
-<tr bgcolor="97d671">  <td>24/02/18 19:40:48</td>   <td>-27448</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="BankTests.deposit()[pri:3, instance:TestCases.BankTests@158a3b2e]">deposit</td> 
-  <td>main@1805164661</td>   <td></td> </tr>
-<tr bgcolor="97d671">  <td>24/02/18 19:40:45</td>   <td>-30336</td> <td>&nbsp;</td><td title="&gt;&gt;BankTests.setUP()[pri:0, instance:TestCases.BankTests@158a3b2e]">&gt;&gt;setUP</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1805164661</td>   <td></td> </tr>
+<tr bgcolor="97d671">  <td>24/02/20 17:50:11</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="BankTests.AddOneCustomer()[pri:7, instance:TestCases.BankTests@615091b8]">AddOneCustomer</td> 
+  <td>main@1454026445</td>   <td></td> </tr>
+<tr bgcolor="97d671">  <td>24/02/20 17:50:18</td>   <td>6256</td> <td>&nbsp;</td><td title="&lt;&lt;BankTests.AfterTest()[pri:0, instance:TestCases.BankTests@615091b8]">&lt;&lt;AfterTest</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1454026445</td>   <td></td> </tr>
+<tr bgcolor="97d671">  <td>24/02/20 17:50:11</td>   <td>-585</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="BankTests.BankManagerLogin()[pri:6, instance:TestCases.BankTests@615091b8]">BankManagerLogin</td> 
+  <td>main@1454026445</td>   <td></td> </tr>
+<tr bgcolor="97d671">  <td>24/02/20 17:50:18</td>   <td>6120</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="BankTests.deleteCustomer()[pri:9, instance:TestCases.BankTests@615091b8]">deleteCustomer</td> 
+  <td>main@1454026445</td>   <td></td> </tr>
+<tr bgcolor="97d671">  <td>24/02/20 17:50:14</td>   <td>2920</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="BankTests.openAccount()[pri:8, instance:TestCases.BankTests@615091b8]">openAccount</td> 
+  <td>main@1454026445</td>   <td></td> </tr>
+<tr bgcolor="97d671">  <td>24/02/20 17:50:09</td>   <td>-2128</td> <td>&nbsp;</td><td title="&gt;&gt;BankTests.setUP()[pri:0, instance:TestCases.BankTests@615091b8]">&gt;&gt;setUP</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1454026445</td>   <td></td> </tr>
 </table>
